--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -205,7 +205,7 @@ privacy/collected_data/other_data_types/used_for_tracking=false
 privacy/collected_data/other_data_types/collection_purposes=0
 icons/icon_1024x1024="uid://p4fs5scc87b2"
 icons/icon_1024x1024_dark="uid://cxyhfa46bpyqb"
-icons/icon_1024x1024_tinted=""
+icons/icon_1024x1024_tinted="uid://b7hhchui2qslg"
 icons/settings_58x58=""
 icons/settings_58x58_dark=""
 icons/settings_58x58_tinted=""
@@ -254,8 +254,8 @@ icons/ios_136x136_tinted=""
 icons/app_store_1024x1024=""
 icons/app_store_1024x1024_dark=""
 icons/app_store_1024x1024_tinted=""
-storyboard/image_scale_mode=0
-storyboard/custom_image@2x=""
-storyboard/custom_image@3x=""
+storyboard/image_scale_mode=1
+storyboard/custom_image@2x="uid://b7hhchui2qslg"
+storyboard/custom_image@3x="uid://b7hhchui2qslg"
 storyboard/use_custom_bg_color=false
 storyboard/custom_bg_color=Color(0, 0, 0, 1)
