Update to fully unsigned exporting
The old export configuration wasn't really doing anything anyway since it still needs to be sideloaded

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="SM63Redux"
+name="SM63 Redux"
 platform="iOS"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../redux-ios-export/SM63Redux.ipa"
+export_path="build/ios/SM63Redux.ipa"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -23,15 +23,15 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 architectures/arm64=true
-application/app_store_team_id="MCPL95LTGJ"
+application/app_store_team_id="\"\""
 application/export_method_debug=1
 application/code_sign_identity_debug=""
 application/code_sign_identity_release=""
 application/provisioning_profile_specifier_debug=""
 application/provisioning_profile_specifier_release=""
-application/export_method_release=0
+application/export_method_release=1
 application/targeted_device_family=2
-application/bundle_identifier="com.reduxteam.sm63r"
+application/bundle_identifier="com.reduxteam.sm63redux"
 application/signature=""
 application/short_version=""
 application/version=""
@@ -203,9 +203,9 @@ privacy/collected_data/other_data_types/collected=false
 privacy/collected_data/other_data_types/linked_to_user=false
 privacy/collected_data/other_data_types/used_for_tracking=false
 privacy/collected_data/other_data_types/collection_purposes=0
-icons/icon_1024x1024="uid://p4fs5scc87b2"
-icons/icon_1024x1024_dark="uid://cxyhfa46bpyqb"
-icons/icon_1024x1024_tinted="uid://b7hhchui2qslg"
+icons/icon_1024x1024="uid://cr3424b51ggqd"
+icons/icon_1024x1024_dark="uid://cr3424b51ggqd"
+icons/icon_1024x1024_tinted="uid://cr3424b51ggqd"
 icons/settings_58x58=""
 icons/settings_58x58_dark=""
 icons/settings_58x58_tinted=""
